Fix front page header on mobile

--- a/wp-content/themes/version9/sass/templates/_front-page.scss
+++ b/wp-content/themes/version9/sass/templates/_front-page.scss
@@ -40,6 +40,7 @@
         
         &:last-of-type {
           margin-right: -112px;
+          margin-left: 22px;
 
           @media all and ( min-width: $screen-xs ) {
             margin-left: 33px;
